--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>hi9eS — Links</title>
+  <title>Social Media Links - hi9eS</title>
 
   <!-- =====================
        CONFIG / TEMPLATE AREA
@@ -174,8 +174,8 @@
 
     <!-- Верхнее предупреждение / инфо -->
     <div class="header">
-      <h1>hi9eS — Social Links</h1>
-      <p>Официальные и проверенные ссылки. Фейковые аккаунты и клоны — игнорировать.</p>
+      <h1>Social Links - hi9eS</h1>
+      <p>Official and verified links. Ignore fake accounts and clones.</p>
       
     </div>
 
@@ -183,7 +183,7 @@
     <div class="links" id="links"></div>
 
     <div class="footer">
-      © hi9eS · GitHub Pages · Latest update: 07.02.2026
+      © OXeall & hi9eS · Official Links · Latest update: 07.02.2026
     </div>
   </div>
 
