--- a/index.html
+++ b/index.html
@@ -18,6 +18,24 @@
         status: "active"
       },
       {
+        name: "Roblox",
+        url: "https://www.roblox.com/users/4238017294/profile",
+        icon: "🎮",
+        status: "active"
+      },
+      {
+        name: "Rockstar Games",
+        url: "https://socialclub.rockstargames.com/member/hi9eSs/games",
+        icon: "🎮",
+        status: "active"
+      },
+      {
+        name: "YouTube",
+        url: "https://www.youtube.com/@hi9eS",
+        icon: "▶️",
+        status: "active"
+      }
+      {
         name: "Discord",
         url: "https://discord.com/users/hi9ess",
         icon: "💬",
@@ -35,12 +53,6 @@
         icon: "👽",
         status: "soon"
       },
-      {
-        name: "YouTube",
-        url: "https://www.youtube.com/@hi9eS",
-        icon: "▶️",
-        status: "active"
-      }
     ];
   </script>
 
