--- a/index.html
+++ b/index.html
@@ -1,221 +1,185 @@
 <!DOCTYPE html>
 <html lang="ru">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>hi9eS Social Links</title>
+<meta charset="UTF-8" />
+<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+<title>hi9eS Social Links</title>
 
-  <!-- =====================
-       CONFIG / TEMPLATE AREA
-       Меняешь здесь — меняется весь сайт
-       ===================== -->
-  <script>
-    const LINKS = [
-      {
-        name: "Steam",
-        url: "https://steamcommunity.com/id/hi9eS/",
-        icon: "🎮",
-        status: "active"
-      },
-      {
-        name: "Roblox",
-        url: "https://www.roblox.com/users/4238017294/profile",
-        icon: "🎮",
-        status: "active"
-      },
-      {
-        name: "Rockstar Games",
-        url: "https://socialclub.rockstargames.com/member/hi9eSs/games",
-        icon: "🎮",
-        status: "active"
-      },
-      {
-        name: "YouTube",
-        url: "https://www.youtube.com/@hi9eS",
-        icon: "▶️",
-        status: "active"
-      },
-      {
-        name: "Discord",
-        url: "https://discord.com/users/hi9ess",
-        icon: "💬",
-        status: "active"
-      },
-      {
-        name: "X (Twitter)",
-        url: "https://x.com/hi9ess",
-        icon: "✖️",
-        status: "active"
-      },
-      {
-        name: "Reddit",
-        url: null,
-        icon: "👽",
-        status: "soon"
-      }
-    ];
-  </script>
-  
-  <style>
-    :root {
-      --bg: #0b0e14;
-      --card: rgba(255,255,255,0.08);
-      --card-hover: rgba(255,255,255,0.14);
-      --text: #e6e6eb;
-      --muted: #9aa0b3;
-      --accent: #4f8cff;
-      --radius: 16px;
-      --blur: blur(14px);
-    }
+<script>
+const LINKS = [
+  {
+    name: "Steam",
+    url: "https://steamcommunity.com/id/hi9eS/",
+    icon: "🎮",
+    status: "active"
+  },
+  {
+    name: "Discord",
+    url: "https://discord.com/users/hi9ess",
+    icon: "💬",
+    status: "active"
+  },
+  {
+    name: "Rockstar Games",
+    url: "https://socialclub.rockstargames.com/member/hi9eSs/games",
+    icon: "🎮",
+    status: "active"
+  },
+  {
+    name: "YouTube",
+    url: "https://www.youtube.com/@hi9eS",
+    icon: "▶️",
+    status: "active"
+  },
+  {
+    name: "Roblox",
+    url: "https://www.roblox.com/users/4238017294/profile",
+    icon: "🎮",
+    status: "active"
+  },
+  {
+    name: "X (Twitter)",
+    url: "https://x.com/hi9ess",
+    icon: "✖️",
+    status: "active"
+  },
+  {
+    name: "Reddit",
+    url: null,
+    icon: "👽",
+    status: "soon"
+  }
+];
+</script>
 
-    * {
-      box-sizing: border-box;
-      font-family: Inter, system-ui, -apple-system, BlinkMacSystemFont, sans-serif;
-    }
+<style>
+:root {
+  --bg: #0b0e14;
+  --card: rgba(255,255,255,0.08);
+  --card-hover: rgba(255,255,255,0.14);
+  --text: #e6e6eb;
+  --muted: #9aa0b3;
+  --accent: #4f8cff;
+  --radius: 18px;
+  --blur: blur(14px);
+}
 
-    body {
-      margin: 0;
-      min-height: 100vh;
-      background: radial-gradient(circle at top, #11162a, #07090f 60%);
-      color: var(--text);
-      display: flex;
-      justify-content: center;
-      align-items: flex-start;
-      padding: 40px 16px;
-    }
+* { box-sizing: border-box; font-family: Inter, system-ui, -apple-system, BlinkMacSystemFont, sans-serif; }
 
-    .container {
-      width: 100%;
-      max-width: 520px;
-    }
+body {
+  margin: 0;
+  min-height: 100vh;
+  background: radial-gradient(circle at top, #11162a, #07090f 60%);
+  color: var(--text);
+  display: flex;
+  justify-content: center;
+  align-items: flex-start;
+  padding: 40px 16px;
+}
 
-    /* Header */
-    .header {
-      background: var(--card);
-      backdrop-filter: var(--blur);
-      border-radius: var(--radius);
-      padding: 20px;
-      margin-bottom: 24px;
-      border: 1px solid rgba(255,255,255,0.08);
-    }
+.container { width: 100%; max-width: 520px; }
 
-    .header h1 {
-      margin: 0 0 8px;
-      font-size: 22px;
-      font-weight: 600;
-      letter-spacing: 0.2px;
-    }
+/* Header */
+.header {
+  background: var(--card);
+  backdrop-filter: var(--blur);
+  border-radius: var(--radius);
+  padding: 24px;
+  margin-bottom: 28px;
+  border: 1px solid rgba(255,255,255,0.08);
+}
+.header h1 {
+  margin: 0 0 10px;
+  font-size: 26px;
+  font-weight: 600;
+  letter-spacing: 0.2px;
+}
+.header p {
+  margin: 0;
+  font-size: 15px;
+  color: var(--muted);
+}
 
-    .header p {
-      margin: 0;
-      font-size: 14px;
-      color: var(--muted);
-    }
+/* Link cards */
+.links { display: flex; flex-direction: column; gap: 16px; }
 
-    /* Link cards */
-    .links {
-      display: flex;
-      flex-direction: column;
-      gap: 14px;
-    }
+.link-card {
+  display: flex;
+  align-items: center;
+  gap: 16px;
+  padding: 20px 22px;
+  border-radius: var(--radius);
+  background: var(--card);
+  backdrop-filter: var(--blur);
+  border: 1px solid rgba(255,255,255,0.08);
+  cursor: pointer;
+  transition: all 0.2s ease;
+  text-decoration: none;
+  color: var(--text);
+  box-shadow: 0 4px 12px rgba(0,0,0,0.25);
+}
+.link-card:hover { background: var(--card-hover); transform: translateY(-3px); }
+.link-card.disabled { cursor: not-allowed; opacity: 0.6; }
 
-    .link-card {
-      display: flex;
-      align-items: center;
-      gap: 14px;
-      padding: 16px 18px;
-      border-radius: var(--radius);
-      background: var(--card);
-      backdrop-filter: var(--blur);
-      border: 1px solid rgba(255,255,255,0.08);
-      cursor: pointer;
-      transition: all 0.2s ease;
-      text-decoration: none;
-      color: var(--text);
-    }
+.icon {
+  font-size: 32px;
+  width: 40px;
+  text-align: center;
+}
 
-    .link-card:hover {
-      background: var(--card-hover);
-      transform: translateY(-2px);
-    }
+.link-info { display: flex; flex-direction: column; gap: 3px; }
+.link-info span.title { font-size: 18px; font-weight: 500; }
+.link-info span.subtitle { font-size: 14px; color: var(--muted); }
 
-    .link-card.disabled {
-      cursor: not-allowed;
-      opacity: 0.6;
-    }
-
-    .icon {
-      font-size: 24px;
-      width: 32px;
-      text-align: center;
-    }
-
-    .link-info {
-      display: flex;
-      flex-direction: column;
-      gap: 2px;
-    }
-
-    .link-info span.title {
-      font-size: 16px;
-      font-weight: 500;
-    }
-
-    .link-info span.subtitle {
-      font-size: 13px;
-      color: var(--muted);
-    }
-
-    /* Footer */
-    .footer {
-      margin-top: 28px;
-      text-align: center;
-      font-size: 12px;
-      color: var(--muted);
-      opacity: 0.7;
-    }
-  </style>
+/* Footer */
+.footer {
+  margin-top: 32px;
+  text-align: center;
+  font-size: 13px;
+  color: var(--muted);
+  opacity: 0.8;
+}
+</style>
 </head>
 <body>
-  <div class="container">
 
-    <!-- Верхнее предупреждение / инфо -->
-    <div class="header">
-      <h1>hi9eS - Social Links</h1>
-      <p>Official and verified links. Ignore fake accounts and clones.</p>
-    </div>
+<div class="container">
 
-    <!-- Ссылки -->
-    <div class="links" id="links"></div>
-
-    <div class="footer">
-      © OXeall & hi9eS • Created by OXeall • Latest update: 07d.02m.2026y.
-    </div>
+  <!-- Верхнее предупреждение / инфо -->
+  <div class="header">
+    <h1>hi9eS - Social Links</h1>
+    <p>Official and verified links. Ignore fake accounts and clones.</p>
   </div>
 
-  <script>
-    const container = document.getElementById('links');
+  <!-- Ссылки -->
+  <div class="links" id="links"></div>
 
-    LINKS.forEach(link => {
-      const card = document.createElement(link.url ? 'a' : 'div');
-      card.className = 'link-card' + (link.status !== 'active' ? ' disabled' : '');
+  <div class="footer">
+    © OXeall & hi9eS • Created by OXeall • Latest update: 07d.02m.2026y.
+  </div>
 
-      if (link.url) {
-        card.href = link.url;
-        card.target = '_blank';
-        card.rel = 'noopener noreferrer';
-      }
+</div>
 
-      card.innerHTML = `
-        <div class="icon">${link.icon}</div>
-        <div class="link-info">
-          <span class="title">${link.name}</span>
-          <span class="subtitle">${link.status === 'active' ? link.url : 'Coming Soon'}</span>
-        </div>
-      `;
+<script>
+const container = document.getElementById('links');
+LINKS.forEach(link => {
+  const card = document.createElement(link.url ? 'a' : 'div');
+  card.className = 'link-card' + (link.status !== 'active' ? ' disabled' : '');
+  if (link.url) {
+    card.href = link.url;
+    card.target = '_blank';
+    card.rel = 'noopener noreferrer';
+  }
+  card.innerHTML = `
+    <div class="icon">${link.icon}</div>
+    <div class="link-info">
+      <span class="title">${link.name}</span>
+      <span class="subtitle">${link.status === 'active' ? link.url : 'Coming Soon'}</span>
+    </div>
+  `;
+  container.appendChild(card);
+});
+</script>
 
-      container.appendChild(card);
-    });
-  </script>
 </body>
 </html>
