--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@ body {
   <div class="links" id="links"></div>
 
   <div class="footer">
-    © OXeall & hi9eS • Created by OXeall • Latest update: 07d.02m.2026y.
+    © OXeall & hi9eS • Founded by hi9eS • Latest update: 07.02.2026. 
   </div>
 
 </div>
