--- a/index.html
+++ b/index.html
@@ -143,13 +143,21 @@ body {
 .icon.small { font-size: 22px; width: 28px; text-align: center; }
 .icon.large { font-size: 32px; width: 40px; text-align: center; }
 
+/* Info блок, subtitle на новой строке */
+.link-info {
+  display: flex;
+  flex-direction: column;
+  gap: 2px;
+  word-break: break-word;
+}
+
 .link-info span.title.normal { font-size: 17px; font-weight: 500; }
 .link-info span.title.small { font-size: 14px; font-weight: 500; }
 .link-info span.title.large { font-size: 20px; font-weight: 500; }
 
-.link-info span.subtitle.normal { font-size: 13px; color: var(--muted); }
-.link-info span.subtitle.small { font-size: 11px; color: var(--muted); }
-.link-info span.subtitle.large { font-size: 15px; color: var(--muted); }
+.link-info span.subtitle.normal { font-size: 13px; color: var(--muted); display: block; }
+.link-info span.subtitle.small { font-size: 11px; color: var(--muted); display: block; }
+.link-info span.subtitle.large { font-size: 15px; color: var(--muted); display: block; }
 
 /* Footer */
 .footer {
