--- a/index.html
+++ b/index.html
@@ -71,6 +71,7 @@ const LINKS = [
   --bg: #0b0e14;
   --card: rgba(255,255,255,0.08);
   --card-hover: rgba(255,255,255,0.14);
+  --header-bg: rgba(255,255,255,0.06);
   --text: #e6e6eb;
   --muted: #9aa0b3;
   --accent: #4f8cff;
@@ -78,8 +79,8 @@ const LINKS = [
   --blur: blur(14px);
 }
 
+/* Общие стили */
 * { box-sizing: border-box; font-family: Inter, system-ui, -apple-system, BlinkMacSystemFont, sans-serif; }
-
 body {
   margin: 0;
   min-height: 100vh;
@@ -90,34 +91,28 @@ body {
   align-items: flex-start;
   padding: 40px 16px;
 }
-
 .container { width: 100%; max-width: 520px; }
 
-/* Header */
+/* Header с легким Liquid Glass при наведении */
 .header {
-  background: var(--card);
+  background: var(--header-bg);
   backdrop-filter: var(--blur);
   border-radius: var(--radius);
   padding: 22px;
   margin-bottom: 24px;
   border: 1px solid rgba(255,255,255,0.08);
+  transition: box-shadow 0.3s ease, background 0.3s ease;
 }
-.header h1 {
-  margin: 0 0 8px;
-  font-size: 24px;
-  font-weight: 600;
-  letter-spacing: 0.2px;
+.header:hover {
+  background: rgba(255,255,255,0.1);
+  box-shadow: 0 8px 30px rgba(255,255,255,0.1);
 }
-.header p {
-  margin: 0;
-  font-size: 14px;
-  color: var(--muted);
-}
+.header h1 { margin: 0 0 8px; font-size: 24px; font-weight: 600; letter-spacing: 0.2px; }
+.header p { margin: 0; font-size: 14px; color: var(--muted); }
 
 /* Link cards */
-.links { display: flex; flex-direction: column; gap: 14px; }
+.links { display: flex; flex-direction: column; gap: 12px; }
 
-/* Стандартная плашка */
 .link-card {
   display: flex;
   align-items: center;
@@ -135,7 +130,6 @@ body {
 .link-card.normal { padding: 14px 20px; }
 .link-card.small { padding: 10px 16px; font-size: 14px; }
 .link-card.large { padding: 18px 24px; font-size: 18px; }
-
 .link-card:hover { background: var(--card-hover); transform: translateY(-2px); }
 .link-card.disabled { cursor: not-allowed; opacity: 0.6; }
 
@@ -143,30 +137,12 @@ body {
 .icon.small { font-size: 22px; width: 28px; text-align: center; }
 .icon.large { font-size: 32px; width: 40px; text-align: center; }
 
-/* Info блок, subtitle на новой строке */
-.link-info {
-  display: flex;
-  flex-direction: column;
-  gap: 2px;
-  word-break: break-word;
-}
-
 .link-info span.title.normal { font-size: 17px; font-weight: 500; }
 .link-info span.title.small { font-size: 14px; font-weight: 500; }
 .link-info span.title.large { font-size: 20px; font-weight: 500; }
 
-.link-info span.subtitle.normal { font-size: 13px; color: var(--muted); display: block; }
-.link-info span.subtitle.small { font-size: 11px; color: var(--muted); display: block; }
-.link-info span.subtitle.large { font-size: 15px; color: var(--muted); display: block; }
-
 /* Footer */
-.footer {
-  margin-top: 28px;
-  text-align: center;
-  font-size: 12px;
-  color: var(--muted);
-  opacity: 0.8;
-}
+.footer { margin-top: 28px; text-align: center; font-size: 12px; color: var(--muted); opacity: 0.8; }
 </style>
 </head>
 <body>
@@ -176,7 +152,7 @@ body {
   <!-- Верхнее предупреждение / инфо -->
   <div class="header">
     <h1>hi9eS - Social Links</h1>
-    <p>Official and verified links. Ignore fake accounts and clones.</p>
+    <p>Official and verified links. Click on a card to visit the site.</p>
   </div>
 
   <!-- Ссылки -->
@@ -203,7 +179,6 @@ LINKS.forEach(link => {
     <div class="icon ${sizeClass}">${link.icon}</div>
     <div class="link-info">
       <span class="title ${sizeClass}">${link.name}</span>
-      <span class="subtitle ${sizeClass}">${link.status === 'active' ? link.url : 'Coming Soon'}</span>
     </div>
   `;
   container.appendChild(card);
