--- a/index.html
+++ b/index.html
@@ -10,56 +10,56 @@ const LINKS = [
   {
     name: "Steam",
     url: "https://steamcommunity.com/id/hi9eS/",
-    icon: "🎮",
+    icon: '<img src="https://upload.wikimedia.org/wikipedia/commons/8/83/Steam_icon_logo.svg" alt="Steam" style="width:28px;height:28px;">',
     status: "active",
     size: "normal"
   },
   {
     name: "Discord",
     url: "https://discord.com/users/hi9ess",
-    icon: "💬",
+    icon: '<img src="https://upload.wikimedia.org/wikipedia/commons/9/98/Discord_logo.svg" alt="Discord" style="width:28px;height:28px;">',
     status: "active",
     size: "normal"
   },
   {
     name: "GameBume Discord Channel",
     url: "https://discord.gg/jJGAmFVHGu",
-    icon: "💬",
+    icon: '<img src="https://upload.wikimedia.org/wikipedia/commons/9/98/Discord_logo.svg" alt="Discord" style="width:22px;height:22px;">',
     status: "active",
     size: "small"
   },
   {
     name: "Rockstar Games",
     url: "https://socialclub.rockstargames.com/member/hi9eSs/games",
-    icon: "🎮",
+    icon: '<img src="https://upload.wikimedia.org/wikipedia/commons/1/15/Rockstar_Games_Logo.svg" alt="Rockstar Games" style="width:28px;height:28px;">',
     status: "active",
     size: "normal"
   },
   {
     name: "YouTube",
     url: "https://www.youtube.com/@hi9eS",
-    icon: "▶️",
+    icon: '<img src="https://upload.wikimedia.org/wikipedia/commons/b/b8/YouTube_Logo_2017.svg" alt="YouTube" style="width:28px;height:28px;">',
     status: "active",
     size: "normal"
   },
   {
     name: "Roblox",
     url: "https://www.roblox.com/users/4238017294/profile",
-    icon: "🎮",
+    icon: '<img src="https://upload.wikimedia.org/wikipedia/commons/6/6a/Roblox_Logo_2022.svg" alt="Roblox" style="width:28px;height:28px;">',
     status: "active",
     size: "normal"
   },
   {
     name: "X (Twitter)",
     url: "https://x.com/hi9ess",
-    icon: "✖️",
+    icon: '<img src="https://upload.wikimedia.org/wikipedia/commons/2/2f/X_Logo.svg" alt="X" style="width:28px;height:28px;">',
     status: "active",
     size: "normal"
   },
   {
     name: "Reddit",
     url: null,
-    icon: "👽",
+    icon: '<img src="https://upload.wikimedia.org/wikipedia/en/8/82/Reddit_logo_and_wordmark.svg" alt="Reddit" style="width:28px;height:28px;">',
     status: "soon",
     size: "normal"
   }
