--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@ body {
 }
 .container { width: 100%; max-width: 520px; }
 
-/* Header с легким Liquid Glass при наведении */
+/* Header с мягким Liquid Glass при наведении */
 .header {
   background: var(--header-bg);
   backdrop-filter: var(--blur);
@@ -116,6 +116,7 @@ body {
 .link-card {
   display: flex;
   align-items: center;
+  justify-content: flex-start;
   gap: 14px;
   border-radius: var(--radius);
   background: var(--card);
@@ -126,6 +127,7 @@ body {
   text-decoration: none;
   color: var(--text);
   box-shadow: 0 3px 10px rgba(0,0,0,0.2);
+  padding-top: 4px; /* выравниваем icon и text чуть ниже */
 }
 .link-card.normal { padding: 14px 20px; }
 .link-card.small { padding: 10px 16px; font-size: 14px; }
@@ -133,13 +135,14 @@ body {
 .link-card:hover { background: var(--card-hover); transform: translateY(-2px); }
 .link-card.disabled { cursor: not-allowed; opacity: 0.6; }
 
-.icon.normal { font-size: 28px; width: 36px; text-align: center; }
-.icon.small { font-size: 22px; width: 28px; text-align: center; }
-.icon.large { font-size: 32px; width: 40px; text-align: center; }
+.icon.normal { font-size: 28px; width: 36px; text-align: center; line-height: 1; }
+.icon.small { font-size: 22px; width: 28px; text-align: center; line-height: 1; }
+.icon.large { font-size: 32px; width: 40px; text-align: center; line-height: 1; }
 
-.link-info span.title.normal { font-size: 17px; font-weight: 500; }
-.link-info span.title.small { font-size: 14px; font-weight: 500; }
-.link-info span.title.large { font-size: 20px; font-weight: 500; }
+.link-info { display: flex; flex-direction: column; justify-content: center; }
+.link-info span.title.normal { font-size: 17px; font-weight: 500; line-height: 1.2; }
+.link-info span.title.small { font-size: 14px; font-weight: 500; line-height: 1.2; }
+.link-info span.title.large { font-size: 20px; font-weight: 500; line-height: 1.2; }
 
 /* Footer */
 .footer { margin-top: 28px; text-align: center; font-size: 12px; color: var(--muted); opacity: 0.8; }
