--- a/index.html
+++ b/index.html
@@ -93,7 +93,14 @@ body {
 }
 .container { width: 100%; max-width: 520px; }
 
-/* Header с мягким Liquid Glass при наведении */
+/* Анимация для Liquid Glass */
+@keyframes glass-move {
+  0% { background-position: 0% 0%; }
+  50% { background-position: 100% 100%; }
+  100% { background-position: 0% 0%; }
+}
+
+/* Header с Liquid Glass */
 .header {
   background: var(--header-bg);
   backdrop-filter: var(--blur);
@@ -102,15 +109,18 @@ body {
   margin-bottom: 24px;
   border: 1px solid rgba(255,255,255,0.08);
   transition: box-shadow 0.3s ease, background 0.3s ease;
+  background-image: linear-gradient(120deg, rgba(255,255,255,0.04) 0%, rgba(255,255,255,0.08) 50%, rgba(255,255,255,0.04) 100%);
+  background-size: 200% 200%;
 }
 .header:hover {
   background: rgba(255,255,255,0.1);
-  box-shadow: 0 8px 30px rgba(255,255,255,0.1);
+  box-shadow: 0 8px 30px rgba(255,255,255,0.12);
+  animation: glass-move 6s linear infinite;
 }
 .header h1 { margin: 0 0 8px; font-size: 24px; font-weight: 600; letter-spacing: 0.2px; }
 .header p { margin: 0; font-size: 14px; color: var(--muted); }
 
-/* Link cards */
+/* Link cards с Liquid Glass */
 .links { display: flex; flex-direction: column; gap: 12px; }
 
 .link-card {
@@ -123,16 +133,23 @@ body {
   backdrop-filter: var(--blur);
   border: 1px solid rgba(255,255,255,0.08);
   cursor: pointer;
-  transition: all 0.2s ease;
+  transition: all 0.2s ease, box-shadow 0.3s ease;
   text-decoration: none;
   color: var(--text);
   box-shadow: 0 3px 10px rgba(0,0,0,0.2);
-  padding-top: 4px; /* выравниваем icon и text чуть ниже */
+  padding-top: 4px; /* немного ниже, текст и иконка */
+  background-image: linear-gradient(120deg, rgba(255,255,255,0.02) 0%, rgba(255,255,255,0.06) 50%, rgba(255,255,255,0.02) 100%);
+  background-size: 200% 200%;
 }
 .link-card.normal { padding: 14px 20px; }
 .link-card.small { padding: 10px 16px; font-size: 14px; }
 .link-card.large { padding: 18px 24px; font-size: 18px; }
-.link-card:hover { background: var(--card-hover); transform: translateY(-2px); }
+.link-card:hover {
+  background: var(--card-hover);
+  transform: translateY(-2px);
+  animation: glass-move 8s linear infinite;
+  box-shadow: 0 5px 15px rgba(255,255,255,0.08);
+}
 .link-card.disabled { cursor: not-allowed; opacity: 0.6; }
 
 .icon.normal { font-size: 28px; width: 36px; text-align: center; line-height: 1; }
