--- a/index.html
+++ b/index.html
@@ -77,10 +77,11 @@ const LINKS = [
   --accent: #4f8cff;
   --radius: 16px;
   --blur: blur(14px);
+  --liquid-speed: 6s;
 }
 
-/* Общие стили */
 * { box-sizing: border-box; font-family: Inter, system-ui, -apple-system, BlinkMacSystemFont, sans-serif; }
+
 body {
   margin: 0;
   min-height: 100vh;
@@ -91,75 +92,91 @@ body {
   align-items: flex-start;
   padding: 40px 16px;
 }
-.container { width: 100%; max-width: 520px; }
 
-/* Анимация для Liquid Glass */
-@keyframes glass-move {
-  0% { background-position: 0% 0%; }
-  50% { background-position: 100% 100%; }
-  100% { background-position: 0% 0%; }
-}
+.container { width: 100%; max-width: 520px; }
 
 /* Header с Liquid Glass */
 .header {
   background: var(--header-bg);
   backdrop-filter: var(--blur);
   border-radius: var(--radius);
-  padding: 22px;
-  margin-bottom: 24px;
+  padding: 24px;
+  margin-bottom: 28px;
   border: 1px solid rgba(255,255,255,0.08);
   transition: box-shadow 0.3s ease, background 0.3s ease;
-  background-image: linear-gradient(120deg, rgba(255,255,255,0.04) 0%, rgba(255,255,255,0.08) 50%, rgba(255,255,255,0.04) 100%);
-  background-size: 200% 200%;
+  position: relative;
+  overflow: hidden;
+}
+.header::before {
+  content: '';
+  position: absolute;
+  top: -50%;
+  left: -50%;
+  width: 200%;
+  height: 200%;
+  background: linear-gradient(45deg, rgba(255,255,255,0.05), rgba(255,255,255,0.12), rgba(255,255,255,0.05));
+  filter: blur(20px);
+  transform: rotate(0deg);
+  transition: all 0.6s ease;
+}
+.header:hover::before {
+  transform: rotate(30deg) translateX(5%) translateY(5%);
 }
 .header:hover {
   background: rgba(255,255,255,0.1);
-  box-shadow: 0 8px 30px rgba(255,255,255,0.12);
-  animation: glass-move 6s linear infinite;
+  box-shadow: 0 10px 35px rgba(255,255,255,0.12);
 }
 .header h1 { margin: 0 0 8px; font-size: 24px; font-weight: 600; letter-spacing: 0.2px; }
 .header p { margin: 0; font-size: 14px; color: var(--muted); }
 
-/* Link cards с Liquid Glass */
-.links { display: flex; flex-direction: column; gap: 12px; }
+/* Links */
+.links { display: flex; flex-direction: column; gap: 14px; }
 
 .link-card {
   display: flex;
   align-items: center;
   justify-content: flex-start;
-  gap: 14px;
+  gap: 16px;
   border-radius: var(--radius);
   background: var(--card);
   backdrop-filter: var(--blur);
   border: 1px solid rgba(255,255,255,0.08);
   cursor: pointer;
-  transition: all 0.2s ease, box-shadow 0.3s ease;
+  transition: all 0.3s ease;
   text-decoration: none;
   color: var(--text);
-  box-shadow: 0 3px 10px rgba(0,0,0,0.2);
-  padding-top: 4px; /* немного ниже, текст и иконка */
-  background-image: linear-gradient(120deg, rgba(255,255,255,0.02) 0%, rgba(255,255,255,0.06) 50%, rgba(255,255,255,0.02) 100%);
-  background-size: 200% 200%;
+  box-shadow: 0 4px 15px rgba(0,0,0,0.25);
+  padding: 16px 24px; /* чуть больше */
+  position: relative;
+  overflow: hidden;
 }
-.link-card.normal { padding: 14px 20px; }
-.link-card.small { padding: 10px 16px; font-size: 14px; }
-.link-card.large { padding: 18px 24px; font-size: 18px; }
 .link-card:hover {
-  background: var(--card-hover);
+  background: rgba(255,255,255,0.12);
   transform: translateY(-2px);
-  animation: glass-move 8s linear infinite;
-  box-shadow: 0 5px 15px rgba(255,255,255,0.08);
 }
 .link-card.disabled { cursor: not-allowed; opacity: 0.6; }
 
-.icon.normal { font-size: 28px; width: 36px; text-align: center; line-height: 1; }
-.icon.small { font-size: 22px; width: 28px; text-align: center; line-height: 1; }
-.icon.large { font-size: 32px; width: 40px; text-align: center; line-height: 1; }
+/* Liquid Glass на всех плашках */
+.link-card::before {
+  content: '';
+  position: absolute;
+  top: -50%;
+  left: -50%;
+  width: 200%;
+  height: 200%;
+  background: linear-gradient(120deg, rgba(255,255,255,0.03), rgba(255,255,255,0.08), rgba(255,255,255,0.03));
+  filter: blur(12px);
+  transform: rotate(0deg);
+  transition: all var(--liquid-speed) linear;
+  pointer-events: none;
+}
+.link-card:hover::before {
+  transform: rotate(45deg) translateX(5%) translateY(5%);
+}
 
+.icon { font-size: 28px; width: 36px; text-align: center; }
 .link-info { display: flex; flex-direction: column; justify-content: center; }
-.link-info span.title.normal { font-size: 17px; font-weight: 500; line-height: 1.2; }
-.link-info span.title.small { font-size: 14px; font-weight: 500; line-height: 1.2; }
-.link-info span.title.large { font-size: 20px; font-weight: 500; line-height: 1.2; }
+.link-info span.title { font-size: 17px; font-weight: 500; }
 
 /* Footer */
 .footer { margin-top: 28px; text-align: center; font-size: 12px; color: var(--muted); opacity: 0.8; }
@@ -169,17 +186,15 @@ body {
 
 <div class="container">
 
-  <!-- Верхнее предупреждение / инфо -->
   <div class="header">
     <h1>hi9eS - Social Links</h1>
     <p>Official and verified links. Click on a card to visit the site.</p>
   </div>
 
-  <!-- Ссылки -->
   <div class="links" id="links"></div>
 
   <div class="footer">
-    © OXeall & hi9eS • Founded by hi9eS • Latest update: 07.02.2026. 
+    © OXeall & hi9eS • Founded by hi9eS • Latest update: 07.02.2026.
   </div>
 
 </div>
@@ -188,17 +203,16 @@ body {
 const container = document.getElementById('links');
 LINKS.forEach(link => {
   const card = document.createElement(link.url ? 'a' : 'div');
-  const sizeClass = link.size || 'normal';
-  card.className = 'link-card ' + (link.status !== 'active' ? 'disabled ' : '') + sizeClass;
+  card.className = 'link-card ' + (link.status !== 'active' ? 'disabled' : '');
   if (link.url) {
     card.href = link.url;
     card.target = '_blank';
     card.rel = 'noopener noreferrer';
   }
   card.innerHTML = `
-    <div class="icon ${sizeClass}">${link.icon}</div>
+    <div class="icon">${link.icon}</div>
     <div class="link-info">
-      <span class="title ${sizeClass}">${link.name}</span>
+      <span class="title">${link.name}</span>
     </div>
   `;
   container.appendChild(card);
