--- a/index.html
+++ b/index.html
@@ -10,56 +10,56 @@ const LINKS = [
   {
     name: "Steam",
     url: "https://steamcommunity.com/id/hi9eS/",
-    icon: "🔗",
+    icon: "🎮",
     status: "active",
     size: "normal"
   },
   {
     name: "Discord",
     url: "https://discord.com/users/hi9ess",
-    icon: "🔗",
+    icon: "💬",
     status: "active",
     size: "normal"
   },
   {
     name: "GameBume Discord Channel",
     url: "https://discord.gg/jJGAmFVHGu",
-    icon: "🔗",
+    icon: "💬",
     status: "active",
     size: "small"
   },
   {
     name: "Rockstar Games",
     url: "https://socialclub.rockstargames.com/member/hi9eSs/games",
-    icon: "🔗",
+    icon: "⭐",
     status: "active",
     size: "normal"
   },
   {
     name: "YouTube",
     url: "https://www.youtube.com/@hi9eS",
-    icon: "🔗",
+    icon: "🎬",
     status: "active",
     size: "normal"
   },
   {
     name: "Roblox",
     url: "https://www.roblox.com/users/4238017294/profile",
-    icon: "🔗",
+    icon: "🧱",
     status: "active",
     size: "normal"
   },
   {
     name: "X (Twitter)",
     url: "https://x.com/hi9ess",
-    icon: "🔗",
+    icon: "📣",
     status: "active",
     size: "normal"
   },
   {
     name: "Reddit",
     url: null,
-    icon: "🔗",
+    icon: "🟠",
     status: "soon",
     size: "normal"
   }
@@ -187,4 +187,3 @@ LINKS.forEach(link => {
 
 </body>
 </html>
-
