--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@ body {
   <div class="links" id="links"></div>
 
   <div class="footer">
-    © OXeall & hi9eS • Founded by hi9eS • Latest update: 07.02.2026. 
+    © OXeall & hi9eS • Founded by hi9eS • Build deployment: #27.
   </div>
 </div>
 
